Mejora de pagina

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
     <header class="hero">
       <div class="textos-hero">
-        <h1>Bienvenido a mi Página Web</h1>
-        <p>Sitio donde hablare sobre mi y mis proyectos</p>
+        <h1>Jerónimo Camacho</h1>
+        <p>Soy Desarrollador de Aplicaciones en entorno web</p>
         <a href="#contacto">Contactame</a>
       </div>
 
@@ -45,17 +45,38 @@
       <div class="contenedor-textos-main">
         <h2 class="titulo left">SOBRE MÍ</h2>
         <p class="parrafo">
-            Soy Desarrollador de Aplicaciones en entorno web. 
-
-
+          Me dedico a la creación, modificación y actualización de aplicaciónes
+          en entorno web, especialmente Back-End, pero también tengo nociones de
+          Front-End, que actualmente sigo formandome. <br /><br />
+          Aprendizaje continuo, adquiriendo nuevas habilidades y además
+          actualizado en las tecnologías presentes y futuras conforme a la
+          demanda y/o tendencias.<br /><br />
+          Trabajo vocacionalmente, como consecuencia de esto vuelco toda mi
+          ateción y dedicación a todos y cada uno de mis proyectos.
         </p>
-        <!-- <a href="" class="cta">Leer más</a> -->
       </div>
     </section>
     <section class="info">
       <div class="contenedor">
-        <h2 class="titulo left">Empresas</h2>
-        <p>ID ENERGY GROUP - DEBESYS</p>
+        <h2>Front-end</h2>
+        <br>
+        <ul class="tags">
+          <li><a class="tag">HTML5</a></li>
+          <li><a class="tag">CSS3</a></li>
+          <li><a class="tag">JavaScript(POO-JQuery)</a></li>
+          <li><a class="tag">BootStrap 4</a></li>
+          <li><a class="tag">Control de Versiones: Git/Github</a></li>
+        </ul>
+        <br>
+        <h2>Back-end</h2>
+        <br>
+        <ul class="tags">
+          <li><a class="tag">PHP(MVC-POO)</a></li>
+          <li><a class="tag">NodeJS</a></li>
+          <li><a class="tag">Base de Datos MySQL</a></li>
+          <li><a class="tag">Servidor Web Apache (Xampp)</a></li>
+          <li><a class="tag">CMS Wordpress - WOOCOMERCE</a></li>
+        </ul>
       </div>
     </section>
     <section class="cards contenedor">
@@ -63,8 +84,15 @@
       <div class="content-cards">
         <article class="card">
           <i class="fas fa-chart-bar"></i>
-          <h3>INGREGAS</h3>
-          <p>Aplicación de gestion de gastos e ingresos</p>
+          <h3>INGREGAST</h3>
+          <p>
+            Aplicación de gestion de gastos e ingresos<button
+              class="button type1"
+            >
+              HTML5 - CSS3 - JAVASCRIPT - PHP (LARAVEL)
+            </button>
+          </p>
+
           <a href="https://ingregast.mooo.com/" class="cta" target="_blank"
             >Ver Página</a
           >
@@ -72,7 +100,12 @@
         <article class="card">
           <i class="fas fa-shopping-cart"></i>
           <h3>CORVI-SELECCION</h3>
-          <p>Tienda online con Wordpress</p>
+          <p>
+            Tienda online con Wordpress<button class="button type1">
+              WORDPRESS - WOOCOMERCE - STRIPE
+            </button>
+          </p>
+
           <a href="https://corviseleccion.com/" class="cta" target="_blank"
             >Ver Página</a
           >
@@ -80,7 +113,11 @@
         <article class="card">
           <i class="far fa-object-group"></i>
           <h3>Title Card</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur
+            <button class="button type1">VARIAS TECNOLOGIAS ASDF ASF</button>
+          </p>
+
           <a href="" class="cta">Learn more</a>
         </article>
       </div>
@@ -102,19 +139,17 @@
     <footer id="contacto">
       <div class="contenedor">
         <h2 class="titulo">Contactame</h2>
-        <form action="" class="form">
-          <input class="input" type="text" name="" id="" placeholder="Nombre" />
-          <input class="input" type="email" name="" id="" placeholder="Email" />
-          <textarea
-            class="input"
-            name=""
-            id=""
-            cols="30"
-            rows="10"
-            placeholder="Mensaje"
-          ></textarea>
-          <input class="input" type="submit" value="Enviar" />
-        </form>
+        <div class="icons">
+          <a href="https://github.com/jerodeveloper" target="_blank"
+            ><i class="fab fa-github-square fa-2x"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/jeronimo-camacho-sanchez-6857191b7/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+          <a href="https://www.instagram.com/jerodeveloper/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="https://twitter.com/jerodevelop" target="_blank"
+            ><i class="fab fa-twitter-square fa-2x"></i
+          ></a>
+          <a href="mailto:jerodeveloper@gmail.com" target="_blank"><i class="fas fa-at fa-2x"></i></a>
+        </div>
       </div>
     </footer>
   </body>
